2006-06-19  Enrico Troeger  <enrico.troeger@uvena.de>

  * THANKS, src/about.c: Added translator credits.
  * src/callbacks.c, src/encodings.c, src/utils.c, src/document.c,
    geany.glade, src/interface.c:
    Implemented encoding support to switch between different encodings.


2006-06-19  Frank Lanitz  <frank@frank.uvena.de>

 * configure.in: Added Spanish translation. More info at
                 po/ChangeLog.


2006-06-19  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c, src/utils.c, src/utils.h, src/callbacks.c:
   Don't open files or go to errors automatically whilst compiling.
   Rename utils_goto_workspace_tag to utils_goto_file_line.


2006-06-18  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/keybindings.c: Fixed a segfault when pressing shortcut for
                      "Find Usage" and there is no open file.
 * src/dialogs.c: Removed unneeded label padding.


2006-06-18  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/dialogs.c: Make Keyboard shortcuts dialog scrollable.
 * src/interface.c, geany.glade:
   Set toolbar button Compile text, Execute icon and insert separators
   before Quit and before Revert, Close.
   Move popup item Goto definition above declaration (used more often).
   Move recent files menu up to Open item.
   In prefs use 'Recent files' instead of 'MRU'.
   Correct indentation spelling.
 * src/keybindings.c: Show shortcut keys for Undo/Redo and popup items.
 * src/keybindings.c, src/geany.h, src/callbacks.c, src/sci_cb.c,
   src/callbacks.h: Use correct current_word buffer for popup menu item
                    keybindings; also use GEANY_MAX_WORD_LENGTH.


2006-06-17  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keybindings.c, src/sciwrappers.c, src/sciwrappers.h,
   doc/geany.docbook: Made Duplicate Line command duplicate selection
                      if present.
 * src/highlighting.c: Fixed styling for unmatched braces.
 * src/keybindings.h, doc/geany.docbook: